objects/Solar_Access_Presets__c.object
<CustomObject>
    <fields>
        <fullName>Apr__c</fullName>
        <label>Apr</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <label>Aug</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <label>Dec</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <label>Feb</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <label>Jan</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>July</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>June</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>March</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <label>Nov</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <label>Oct</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sept__c</fullName>
        <label>Sept</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shading_Preset__c</fullName>
        <label>Shading Preset</label>
        <picklist>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Solar Access Preset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Shading_Preset__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Solar Access Preset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solar Access Presets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>